2008-04-17  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp: sync with libpq-fe.h 1.141 (8.3)
	(PQconnectionNeedsPassword, PQconnectionUsedPassword, PQisthreadsafe)
	(PQnparams, PQparamtype, PQdescribePrepared, PQdescribePortal)
	(PQsendDescribePrepared, PQsendDescribePortal, PQescapeStringConn)
	(PQescapeByteaConn, lo_create, lo_truncate, PQencryptPassword)
	(pg_char_to_encoding, pg_encoding_to_char) [commented out for 8.1.4]
	(pg_valid_server_encoding_id): add
	sync with postgres_ext.h 1.17 (8.3)
	(PG_DIAG_SEVERITY, PG_DIAG_SQLSTATE, PG_DIAG_MESSAGE_PRIMARY)
	(PG_DIAG_MESSAGE_DETAIL, PG_DIAG_MESSAGE_HINT)
	(PG_DIAG_STATEMENT_POSITION, PG_DIAG_INTERNAL_POSITION)
	(PG_DIAG_INTERNAL_QUERY, PG_DIAG_CONTEXT, PG_DIAG_SOURCE_FILE)
	(PG_DIAG_SOURCE_LINE, PG_DIAG_SOURCE_FUNCTION): add
	* modules/postgresql/configure.in: check for the new functions

2008-04-16  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): pass the remainder of the input line to the
	command function
	* reploop.lisp (debug-reset-io, debug-help, debug-unwind, debug-quit)
	(debug-mode, debug-where, debug-up, debug-top, debug-down, bottom)
	(debug-frame-limit, debug-backtrace, debug-trap-on, debug-trap-off)
	(debug-redo, return, debug-continue, debug-print-error)
	(debug-inspect-error): accept the argline argument
	(debug-mode-[12345], get-frame-limit, debug-backtrace-[12345]): remove
	(wrap-user-commands): pass argline to user function
	(commands1, commands4): update
	(break-loop): pass argline to the restart caller

2008-04-16  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (break-loop): bind *saved-debug-package* &
	*saved-debug-readtable* so that only that binding is modified by
	debug-reset-io, not the global sane values

2008-04-14  Sam Steingold  <sds@gnu.org>

	* modules/dirkey/dirkey1.lisp: do not re-export LDAP functions from EXT

2008-04-14  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1942246 ]: (coerce 1 '(double-float 0d0)) fails