@@ -1693,72 +1693,72 @@
 (defconstant SEEK_CUR 1)
 (defconstant SEEK_END 2)
 
-(def-c-type FILE (c-struct vector #| components unknown |# ))
+(def-c-type FILE c-pointer)
 
 (def-c-type fpos_t _G_fpos_t)
 
 (defconstant P_tmpdir "/tmp")
 
-(def-c-var stdin (:type c-pointer))
-(def-c-var stdout (:type c-pointer))
-(def-c-var stderr (:type c-pointer))
+(def-c-var stdin (:type FILE))
+(def-c-var stdout (:type FILE))
+(def-c-var stderr (:type FILE))
 
-(def-call-out clearerr (:arguments (fp c-pointer)) (:return-type nil))
-(def-call-out fclose (:arguments (fp c-pointer)) (:return-type int))
-(def-call-out feof (:arguments (fp c-pointer)) (:return-type int))
-(def-call-out ferror (:arguments (fp c-pointer)) (:return-type int))
-(def-call-out fflush (:arguments (fp c-pointer)) (:return-type int))
-(def-call-out fgetc (:arguments (fp c-pointer)) (:return-type int))
-(def-call-out fgetpos (:arguments (fp c-pointer) (pos (c-ptr fpos_t) :out))
+(def-call-out clearerr (:arguments (fp FILE)) (:return-type nil))
+(def-call-out fclose (:arguments (fp FILE)) (:return-type int))
+(def-call-out feof (:arguments (fp FILE)) (:return-type int))
+(def-call-out ferror (:arguments (fp FILE)) (:return-type int))
+(def-call-out fflush (:arguments (fp FILE)) (:return-type int))
+(def-call-out fgetc (:arguments (fp FILE)) (:return-type int))
+(def-call-out fgetpos (:arguments (fp FILE) (pos (c-ptr fpos_t) :out))
   (:return-type int))
-;(def-call-out fgets (:arguments (buf c-pointer) (size int) (fp c-pointer))
+;(def-call-out fgets (:arguments (buf c-pointer) (size int) (fp FILE))
 ;  (:return-type c-string)) ; ??
 (def-call-out fopen (:arguments (path c-string) (mode c-string))
-  (:return-type c-pointer))
+  (:return-type FILE))
 ;; it is pointless to mark (f)printf as (:built-in t)
 ;; because the signature will be different anyway (variadic!)
-(def-call-out fprintf0 (:arguments (fp c-pointer) (format c-string))
+(def-call-out fprintf0 (:arguments (fp FILE) (format c-string))
   (:return-type int) (:name "fprintf"))
-(def-call-out fprintf1i (:arguments (fp c-pointer) (format c-string) (arg int))
+(def-call-out fprintf1i (:arguments (fp FILE) (format c-string) (arg int))
   (:return-type int) (:name "fprintf"))
 (def-call-out fprintf1l
-    (:arguments (fp c-pointer) (format c-string) (arg long))
+    (:arguments (fp FILE) (format c-string) (arg long))
   (:return-type int) (:name "fprintf"))
 (def-call-out fprintf1d
-    (:arguments (fp c-pointer) (format c-string) (arg double-float))
+    (:arguments (fp FILE) (format c-string) (arg double-float))
   (:return-type int) (:name "fprintf"))
-(def-call-out fputc (:arguments (c int) (fp c-pointer))
+(def-call-out fputc (:arguments (c int) (fp FILE))
   (:return-type int))
-(def-call-out fputs (:arguments (str c-string) (fp c-pointer))
+(def-call-out fputs (:arguments (str c-string) (fp FILE))
   (:return-type int))
 ;(def-call-out fread ; ??
-;    (:arguments (ptr c-pointer) (size size_t) (nmemb size_t) (fp c-pointer))
+;    (:arguments (ptr c-pointer) (size size_t) (nmemb size_t) (fp FILE))
 ;  (:return-type size_t))
 ;(def-call-out freopen
-;    (:arguments (path c-string) (mode c-string) (fp c-pointer :in-out)) ; ??
+;    (:arguments (path c-string) (mode c-string) (fp FILE :in-out)) ; ??
 ;  (:return-type c-pointer))
-(def-call-out fscanf0 (:arguments (fp c-pointer) (format c-string))
+(def-call-out fscanf0 (:arguments (fp FILE) (format c-string))
   (:return-type int)
   (:name "fscanf"))
 (def-call-out fscanf1i
-    (:arguments (fp c-pointer) (format c-string) (arg (c-ptr int) :out))
+    (:arguments (fp FILE) (format c-string) (arg (c-ptr int) :out))
   (:return-type int) (:name "fscanf"))
 (def-call-out fscanf1l
-    (:arguments (fp c-pointer) (format c-string) (arg (c-ptr long) :out))
+    (:arguments (fp FILE) (format c-string) (arg (c-ptr long) :out))
   (:return-type int) (:name "fscanf"))
 (def-call-out fscanf1d
-    (:arguments (fp c-pointer) (format c-string)
+    (:arguments (fp FILE) (format c-string)
                 (arg (c-ptr double-float) :out))
   (:return-type int) (:name "fscanf"))
-(def-call-out fseek (:arguments (fp c-pointer) (offset long) (whence int))
+(def-call-out fseek (:arguments (fp FILE) (offset long) (whence int))
   (:return-type int))
-(def-call-out fsetpos (:arguments (fp c-pointer) (pos (c-ptr fpos_t)))
+(def-call-out fsetpos (:arguments (fp FILE) (pos (c-ptr fpos_t)))
   (:return-type int))
-(def-call-out ftell (:arguments (fp c-pointer)) (:return-type long))
+(def-call-out ftell (:arguments (fp FILE)) (:return-type long))
 ;(def-call-out fwrite ; ??
-;    (:arguments (ptr c-pointer) (size size_t) (nmemb size_t) (fp c-pointer))
+;    (:arguments (ptr c-pointer) (size size_t) (nmemb size_t) (fp FILE))
 ;  (:return-type size_t))
-(def-call-out getc (:arguments (fp c-pointer)) (:return-type int))
+(def-call-out getc (:arguments (fp FILE)) (:return-type int))
 (def-call-out getchar (:arguments) (:return-type int))
 ;(def-call-out gets (:arguments (buf c-pointer)) (:return-type c-string)); ??
 (def-call-out perror (:arguments (s c-string)) (:return-type nil))
@@ -1770,13 +1770,13 @@
   (:return-type int) (:name "printf"))
 (def-call-out printf1d (:arguments (format c-string) (arg double-float))
   (:return-type int) (:name "printf"))
-(def-call-out putc (:arguments (c int) (fp c-pointer)) (:return-type int))
+(def-call-out putc (:arguments (c int) (fp FILE)) (:return-type int))
 (def-call-out putchar (:arguments (c int)) (:return-type int))
 (def-call-out puts (:arguments (str c-string)) (:return-type int))
 (def-call-out remove (:arguments (path c-string)) (:return-type int))
 (def-call-out rename (:arguments (old c-string) (new c-string))
   (:return-type int))
-(def-call-out rewind (:arguments (fp c-pointer)) (:return-type nil))
+(def-call-out rewind (:arguments (fp FILE)) (:return-type nil))
 (def-call-out scanf0 (:arguments (format c-string))
   (:return-type int) (:name "scanf"))
 (def-call-out scanf1i (:arguments (format c-string) (arg (c-ptr int) :out))
@@ -1786,13 +1786,13 @@
 (def-call-out scanf1d
     (:arguments (format c-string) (arg (c-ptr double-float) :out))
   (:return-type int) (:name "scanf"))
-(def-call-out setbuf (:arguments (fp c-pointer) (buf c-pointer))
+(def-call-out setbuf (:arguments (fp FILE) (buf c-pointer))
   (:return-type nil))
-(def-call-out setlinebuf (:arguments (fp c-pointer)) (:return-type nil))
-(def-call-out setbuffer (:arguments (fp c-pointer) (buf c-pointer) (size int))
+(def-call-out setlinebuf (:arguments (fp FILE)) (:return-type nil))
+(def-call-out setbuffer (:arguments (fp FILE) (buf c-pointer) (size int))
   (:return-type nil))
 (def-call-out setvbuf
-    (:arguments (fp c-pointer) (buf c-pointer) (mode int) (size size_t))
+    (:arguments (fp FILE) (buf c-pointer) (mode int) (size size_t))
   (:return-type int))
 ;(def-call-out sprintf0 (:arguments (str c-pointer :out) (format c-string))
 ;  (:return-type int) (:name "sprintf")) ; ??
@@ -1815,16 +1815,16 @@
   (:return-type c-string))
 (def-call-out tempnam (:arguments (dir c-string) (prefix c-string))
   (:return-type c-string :malloc-free))
-(def-call-out ungetc (:arguments (c int) (fp c-pointer))
+(def-call-out ungetc (:arguments (c int) (fp FILE))
   (:return-type int))
 ; You can uncomment this if your compiler sets __USE_GNU
 ; (def-call-out fcloseall (:arguments) (:return-type int))
 (def-call-out fdopen (:arguments (fildes int) (mode c-string))
   (:return-type c-pointer))
-(def-call-out fileno (:arguments (fp c-pointer)) (:return-type int))
+(def-call-out fileno (:arguments (fp FILE)) (:return-type int))
 (def-call-out popen (:arguments (command c-string) (mode c-string))
   (:return-type c-pointer))
-(def-call-out pclose (:arguments (fp c-pointer)) (:return-type int))
+(def-call-out pclose (:arguments (fp FILE)) (:return-type int))
 
 (def-call-out ctermid (:arguments (null c-string)) ; ??
   (:return-type c-string))
